<resources>
    <string name="app_name">marati</string>
    <string name="onboarding_title">We connect \npeople with \ndata blazingly \nfast</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="login_with">Login With :</string>
    <string name="register_with">Register With :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_mode">Edit Mode</string>
    <string name="name">Name</string>
    <string name="model">Model</string>
    <string name="nomodel">no model</string>
    <string name="input">Input</string>
    <string name="tipe">Type</string>
    <string name="output">Output</string>
    <string name="plusmodel">+ Model</string>
    <string name="detail_component">Detail Component</string>
    <string name="oauth_google">1050834109037-h791htc98as3jdrc0u65cduikb3ueik4.apps.googleusercontent.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="project_s_name">Project\'s name</string>
    <string name="mqtt_server">MQTT Server</string>
    <string name="port">Port</string>
    <string name="description">Description</string>
    <string name="username_password">username &amp; password</string>
    <string name="project">+ Project</string>
    <string name="username">Username</string>
    <string name="dashboard">Dashboard</string>
    <string name="unsaved">Unsaved</string>
    <string name="saved">Saved</string>
    <string name="content">Content</string>
    <string name="topic">Topic</string>
    <string name="id">Id</string>
    <string name="rules">Rules</string>
</resources>